<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0A1BA"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="right|bottom"
        android:layout_weight="1"
        android:background="#ffffff"
        android:textSize="60dp"
        android:id="@+id/tv_label"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="right|bottom"
        android:layout_weight="1"
        android:background="#ffffff"
        android:textSize="60dp"
        android:id="@+id/tv_result"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_ac" />

        <Button
            android:id="@+id/btDiv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_div" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSeven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_seven" />

        <Button
            android:id="@+id/btEight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_eight" />

        <Button
            android:id="@+id/btNine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_nine"/>
        <Button
            android:id="@+id/btMulti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_multi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_four" />

        <Button
            android:id="@+id/btFive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_five" />

        <Button
            android:id="@+id/btSix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_six" />

        <Button
            android:id="@+id/btSub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_sub" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_one" />

        <Button
            android:id="@+id/btTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_two" />

        <Button
            android:id="@+id/btThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_three" />

        <Button
            android:id="@+id/btAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_add" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btZero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"
            android:text="@string/bt_zero" />

        <Button
            android:id="@+id/btEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="40dp"

            android:text="@string/bt_equal" />
    </LinearLayout>


</LinearLayout>